--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pandas = "^2.2.3"
+requests = "^2.32.3"
+python-dotenv = "^1.0.1"
+openpyxl = "^3.1.5"
+pytest = "^8.3.3"
 
 
 [tool.poetry.group.lint.dependencies]
