--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ pytest = "^8.3.3"
 flake8 = "^7.1.1"
 mypy = "^1.13.0"
 isort = "^5.13.2"
+black = "^24.10.0"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
